# simulareCurutiu

./: CMakeLists.txt  main.cpp
